--- a/Javascript-learning/JavaScript高级程序设计/11.DOM扩展.md
+++ b/Javascript-learning/JavaScript高级程序设计/11.DOM扩展.md
@@ -252,9 +252,55 @@ document.forms[0].scrollIntoView();
 
 ## 11.4 专有扩展
 
+在发现某些功能缺失时，浏览器厂商自己添加的扩展，虽然是厂商自作主张，但实际上专有扩展为 Web 开发领域提供了很多重要功能，这些功能最终都在 HTML5 规范中得到了标准化。
+
 ### 11.4.1 文档模式
 
-X-UA-Compatible
+IE 8 引入了一个新的概念 —— 文档模式（document mode）。页面的文档模式决定了可以使用什么功能。换句话说，文档模式决定了你可以使用哪个级别的 CSS，可以在 JavaScript 中使用哪些 API，以及如何对待文档类型（doctype），直到IE 9，总共有以下 4 种文档模式：
+- IE5：以混杂模式渲染页面（IE 5 的默认模式就是混杂模式）。IE 8+ 中的新功能都无法使用
+- IE7：以 IE 7 标准渲染页面。IE 8+ 中的新功能都无法使用
+- IE8：以 IE 8 标准模式渲染页面。IE 8 中的新功能都可以使用，因此可以使用 Selectors API、更多 CSS2 级选择符和某些 CSS3 功能，还有一些 HTML5 功能。不过 IE 9 中的新功能都无法使用
+- IE9：以 IE 9 标准模式渲染页面。IE 9 中的新功能都可以使用，比如 ECMAScript 5、完整的 CSS 3 以及更多的 HTML5 功能。这个文档模式是最高级的模式
+
+要理解 IE 8+ 的工作原理，必须立即文档模式。
+
+要强制浏览器以某种文档模式渲染页面，可以使用 HTTP 头 X-UA-Compatible，或通过等价的 `<meta>` 标签来设置：
+
+```html
+<meta http-equiv="X-UA-Compatible" content="IE=IEVersion">
+```
+
+IEVersion 有以下值，且并不一定与上述 4 种文档模式对应：
+- Edge：始终以最新的文档模式来渲染页面。忽略文档类型声明。对于 IE 8，则始终保持 IE 8 标准模式渲染页面，IE 9 则以 IE 9 为标准
+- EmulateIE9：如果有文档声明，则以 IE 9 标准模式渲染页面，否则将文档模式设置为 IE 5
+- EmulateIE8：如果有文档声明，则以 IE 8 标准模式渲染页面，否则将文档模式设置为 IE 5
+- EmulateIE7：如果有文档声明，则以 IE 7 标准模式渲染页面，否则将文档模式设置为 IE 5
+- 9：强制以 IE 9 标准模式渲染页面，忽略文档类型声明
+- 9：强制以 IE 8 标准模式渲染页面，忽略文档类型声明
+- 9：强制以 IE 7 标准模式渲染页面，忽略文档类型声明
+- 8：强制将文档模式设置为 IE 5，忽略文档类型声明
+
+比如，想让文档模式像在 IE 7 中一样，可以这样做：
+
+```html
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7">
+```
+
+如果不打算考虑文档类型声明，而直接使用 IE 7 标准模式，那么可以使用下面这行代码：
+
+```html
+<meta http-equiv="X-UA-Compatible" content="IE=7">
+```
+
+没有规定说必须在页面中设置 X-UA-Compatible。默认情况下，浏览器会通过文档类型声明来确定是使用最佳的可用文档模式还是使用混杂模式。
+
+通过 document.documentMode 属性可以知道给定页面使用的是什么文档模式。这个属性是 IE 8 中新增的，它会返回使用的文档模式的版本号（在 IE 9 中，可能返回版本号为 5，7，8，9）
+
+```js
+var mode = document.documentMode;
+```
+
+知道页面采用的是什么文档模式有助于理解页面的行为方式。无论在什么文档模式下，都可以访问这个属性。
 
 ### 11.4.2 children 属性
 
@@ -262,3 +308,142 @@ X-UA-Compatible
 
 ### 11.4.3 contains() 方法
 
+通过在祖先节点上调用 contains() 方法判断节点是否是该祖先的后代节点，如果是则返回 true，否则返回 false。
+
+```js
+document.documentElement.contains(document.body); // true
+```
+
+使用 DOM Level 3 compareDocumentPosition() 也能够确定节点间的关系。支持这个方法的浏览器有 IE 9+，Firefox，Safari，Opera  9.5+ 和 Chrome。这个方法用于确定两个节点间的关系，返回一个表示该关系的位掩码：
+
+|掩码|节点关系|
+|--|--|
+|1|无关（给定的节点不再当前文档中）|
+|2|居前（给定的节点在 DOM 树中位于参考节点之前）|
+|4|居后（给定的节点在 DOM 树中位于参考节点之后）|
+|8|包含（给定的节点是参考节点的祖先）|
+|16|被包含（给定的节点是参考节点的后代）|
+
+为模仿 contains() 方法，应该关注的是掩码 16。可以对 compareDocumentPosition() 的结果执行按位与，以确定参考节点是否包含给定的节点（传入的节点）：
+
+```js
+var result = document.documentElement.compareDocumentPosition(document.body);
+alert(result & 16);
+```
+
+上面的代码执行后，result 为 20（表示 “居后” 的 4 加上表示 “被包含” 的 16）。对掩码 16 执行安慰操作会返回一个非零数值，而两个逻辑非操作符会将该数值转换成布尔值。
+
+使用一些浏览器检测能力，就可以写出如下所示的一个通用 contains 函数：
+
+```js
+// 该函数使用了三种方式来确定一个节点是不是另一个节点的后代
+function contains(refNode, otherNode) {
+    if (typeof refNode.contains == "function" && (!client.engine.webkit || client.engine.webkit >= 522)) {
+        return refNode.contains(otherNode);
+    } else if (typeof refNode.compareDocumentPosition == "function") {
+        return !!(refNode.compareDocumentPosition(otherNode) & 16);
+    } else {
+        var node = otherNode.parentNode;
+        do {
+            if (node === refNode) {
+                return true;
+            } else {
+                node = node.parentNode;
+            }
+        } while(node !== null);
+        return false;
+    }
+}
+```
+
+### 11.4.4 插入文本
+
+IE 中原有的插入标记属性 innerHTML 和 outerHTML 已经被 HTML5 纳入规范，但是 innerText 和 outerText 则没那么幸运。
+
+#### 1. innerText 属性
+
+通过 innerText 可以操作元素中包含的所有文本内容，包括子文档树中的文本。
+- 在通过 innerText 读取值时，它会按照由浅入深的顺序将子文档树中的所有文本拼接起来。
+- 在通过 innerText 写入值时，结果会删除元素的所有子节点，插入包含相应文本值的文本节点。
+
+设置 innerText 时，文本中存在的 HTML 语法字符（大于号，小于号，引号及和号）会进行编码：
+
+```js
+var content = document.getElementById('content');
+content.innerText  = "Hello & Welcome. <b>\"reader\"!</b>";
+```
+
+```html
+<!-- chrome 中 -->
+<div id="content">Hello &amp; Welcome. &lt;b&gt;"reader"!&lt;/b&gt;</div>
+```
+
+设置 innerText 用于只会生成当前节点的一个子文本节点，而为了确保只生成一个子文本节点， 就必须要对文本进行 HTML 编码，但是我们可以利用 innerText 来过滤掉 HTML 标签，方法就是将 innerText 设置为 innerText：
+
+```js
+// 用原来的文本内容替换容器元素中的所有内容（包括子节点，因而也就去掉了 HTML 标签）
+div.innerText = div.innerText;
+```
+
+支持 innerText 属性的浏览器包括 IE 4+，Safari 3+，Opera 8+ 和 Chrome，Firefox虽然不支持 innerText（实际上通过 [caniuse](https://caniuse.com/#search=innerText) 可以查到，Firefox 在 2016年发布的 45版本中已经支持该属性），但是支持作用类似的 textContent 属性，textContent 属性是 DOM Level 3 规定的一个属性，支持该属性的还有 IE 9+，Safari 3+，Opera 10+ 和 Chrome，为了确保跨浏览器的兼容性，需要编写一个函数用来检测使用哪个属性：
+
+```js
+function getInnerText(element) {
+  return  (typeof element.textContent == 'string' ? element.textContent : element.innerText);
+}
+
+function setInnerText(element, text) {
+  if (typeof element.textContent == 'string') {
+    element.textContent = text;
+  } else {
+    element.innerText = text;
+  }
+}
+```
+
+      实际上，innerText 与 textContent 返回的内容并不完全一样。比如 innerText 会忽略行内样式和脚本，而 textContent 则会像返回其他文本一样返回行内样式和脚本。避免跨浏览器兼容问题的最佳途径，就是从不包含行内样式或行内脚本的 DOM 子树副本或 DOM 片段中读取文本。
+
+#### 2. outerText 属性
+
+outerText 会替换整个元素而非其子节点， `div.outerText = 'Hello world!'` 等于：
+
+```js
+var text = document.createTextNode('Hellow world!');
+div.parentNode.replaceChild(text, div);
+```
+
+浏览器的支持程度同 innerText。
+
+### 11.4.5 滚动
+
+HTML5 之前的规范并没有就与页面滚动相关的 API 做出任何规定。但 HTML5 在将 scrollIntoView() 纳入规范之后，任然还有其他几个专有方法可以在不同的浏览器中使用。下面列出的几个方法都是对 HTMLElement 类型的扩展，因此在所有的元素中都可以调用：
+- scrollIntoViewIfNeeded(alignCenter)：只有当前元素在视口中不可见的情况下才滚动浏览器窗口或容器元素，最终让它可见。如果当前元素在视口中可见则不做任何操作。如果将 alignCenter 参数设置为 true，则表示尽量将元素显示在视口中部（垂直方向）。Safari 和 Chrome 实现了这个方法
+- scrollByLines(lineCount)：将元素的内容滚动指定的行高，lineCount 值可以是正值，也可以是负值。Safari 和 Chrome 实现了这个方法
+- scrollByPages(pageCount)：将元素的内容滚动指定的页面高度，具体高度由元素的高度决定。Safari 和 Chrome 实现了这个方法
+
+值得注意的是，scrollIntoView() 和 scrollIntoViewIfNeeded() 的作用对象是元素的容器，而 scrollByLines() 和 scrollByPages() 影响的则是元素自身。看几个例子：
+
+```js
+// 将页面主题滚动 5 行
+document.body.scrollByLines(5);
+
+// 在元素不可见的时候让它进入浏览器窗口
+document.imgages[0].scrollIntoViewIfNeeded();
+
+// 将页面主题往回滚动 1 页
+document.body.scrollByPages(-1);
+```
+
+个人备注：在实际测试中，Chrome 并没有实现 scrollByLines() 和 scrollByPages() 方法，而是有一个以像素为单位的 [scrollBy()](https://developer.mozilla.org/en-US/docs/Web/API/Window/scrollBy) 方法，参数有以下两种方式：
+- (`x-coord`, `y-coord`)
+- options：一个对象，包含如下选项：
+  - `top`, which is the same as the `y-coord`
+  - `left`, which is the same as the `x-coord`
+  - `behavior`, which is a string containing one of `smooth`, `instant`, or `auto`; default is `auto`
+
+```js
+// 使用 scrollBy 向下滚动一页
+window.scrollBy(0, window.innerHeight);  // 向上则为 -window.innerHeight
+```
+
+由于 scrollIntoView() 是唯一一个所有浏览器都支持的方法，因此还是这个方法最常用。
