--- a/Javascript-learning/JavaScript高级程序设计/10.DOM.md
+++ b/Javascript-learning/JavaScript高级程序设计/10.DOM.md
@@ -544,7 +544,7 @@ DocumentType 类型在 Web 浏览器中并不常用，它包含着与文档 doct
 
 虽然不能将文档片段直接添加到文档中，但是可以将它作为一个 “仓库” 来用，即可以在里面保存将来可能会添加到文档中的节点。可以使用 document.createDocumentFragment() 方法。
 
-文档片段继承了 Node 的所有方法，可以用于执行那些针对文档的 DOM 操作。如果将文档中的节点添加到文档片段中，就会从文档树中移除该节点，也不会从浏览器中在看到该节点。添加到文档片段中的新节点同样也不属于文档树。可以通过 appendChild() 或 insertBefore() 将文档片段中的内容添加到文档中，在将文档片段传递给这两个方法时，实际上只会将文档片段的所有子节点添加到相应位置上；文档片段本身用于不会成为文档树的一部分。
+文档片段继承了 Node 的所有方法，可以用于执行那些针对文档的 DOM 操作。如果将文档中的节点添加到文档片段中，就会从文档树中移除该节点，也不会从浏览器中在看到该节点。添加到文档片段中的新节点同样也不属于文档树。可以通过 appendChild() 或 insertBefore() 将文档片段中的内容添加到文档中，在将文档片段传递给这两个方法时，实际上只会将文档片段的所有子节点添加到相应位置上；文档片段本身不会成为文档树的一部分。
 
 例如：
 
