--- a/Javascript-learning/JavaScript高级程序设计/11.DOM扩展.md
+++ b/Javascript-learning/JavaScript高级程序设计/11.DOM扩展.md
@@ -72,7 +72,7 @@ while (child != element.lastElementChild) {
 }
 ```
 
-实际上，Element Traversal API 的这几个 API 如 firstElementChild 比 firstChild 多了个 Element，它的作用就是只筛选出 Element 类型，不用再在代码中判断 nodeType 是否为 1 了。
+个人备注：实际上，Element Traversal API 的这几个 API 如 firstElementChild 比 firstChild 多了个 Element，它的作用就是只筛选出 Element 类型，不用再在代码中判断 nodeType 是否为 1 了。
 
 IE9 +
 
