--- a/Frontend-learning/redux/官方文档.md
+++ b/Frontend-learning/redux/官方文档.md
@@ -4,3 +4,5 @@
 
 - [Actions](https://github.com/Cinux-Chosan/redux/blob/master/docs/basics/Actions.zh_cn.md)
 - [Reducers](https://github.com/Cinux-Chosan/redux/blob/master/docs/basics/Reducers.zh_cn.md)
+- [Store](https://github.com/Cinux-Chosan/redux/blob/master/docs/basics/Store.zh_cn.md)
+- [Data Flow](https://github.com/Cinux-Chosan/redux/blob/master/docs/basics/DataFlow.zh_cn.md)
