--- a/Frontend-learning/Typescript/官方文档笔记.md
+++ b/Frontend-learning/Typescript/官方文档笔记.md
@@ -38,3 +38,70 @@
 
 ## [类](http://www.typescriptlang.org/docs/handbook/classes.html)
 
+- ts 是一个结构类型系统，如果我们对两个类型进行比较，如果它其中的所有类型都兼容，则认为这两个是兼容的。但是如果比较的类型包含了 `private` 或者 `protected` 成员，则 ts 会以不同的方式来处理它们：如果要认为两个类型是兼容的，其中一个具有私有或者保护属性时，另一个也必须有和它**相同来源**的私有或者保护属性。
+  ```ts
+    class Animal {
+        private name: string;
+        constructor(theName: string) { this.name = theName; }
+    }
+
+    class Rhino extends Animal {
+        constructor() { super("Rhino"); }
+    }
+
+    class Employee {
+        private name: string;
+        constructor(theName: string) { this.name = theName; }
+    }
+
+    let animal = new Animal("Goat");
+    let rhino = new Rhino();
+    let employee = new Employee("Bob");
+
+    animal = rhino;
+    animal = employee; // Error: 'Animal' and 'Employee' are not compatible
+  ```
+- 构造函数也可以是 `protected`，此时它就不能直接被实例化，但可以在派生类中调用：
+  ```ts
+    class Person {
+        protected name: string;
+        protected constructor(theName: string) { this.name = theName; }
+    }
+
+    // Employee can extend Person
+    class Employee extends Person {
+        private department: string;
+
+        constructor(name: string, department: string) {
+            super(name);
+            this.department = department;
+        }
+
+        public getElevatorPitch() {
+            return `Hello, my name is ${this.name} and I work in ${this.department}.`;
+        }
+    }
+
+    let howard = new Employee("Howard", "Sales");
+    let john = new Person("John"); // Error: The 'Person' constructor is protected
+  ```
+
+- 参数属性，即声明和赋值都在构造函数中完成的成员属性。如果要让一个属性成为参数属性，只需要在它前面加上 `public`、 `private`、 `protected` 或 `readonly` 即可。
+  ```ts
+  class Octopus {
+    readonly numberOfLegs: number = 8;
+    constructor(readonly name: string) {  // name 就是参数属性，相当于声明了 readonly name: string; 并在构造函数中对其进行赋值
+    }
+  }
+  ```
+- 抽象类和抽象方法使用关键字 `abstract` 定义，抽象类用来作为基类供其他类继承，它本身不能被实例化。抽象类中的抽象方法只包含声明，不能被实现，且必须在派生类中去实现，即派生类必须实现每个基类的抽象方法。
+- 声明一个类会创建两个东西：
+  - 代表类实例的类型
+  -  一个构造函数
+  
+  由于类创建了类型，因此可以在能够使用接口的地方用类来代替
+
+## [Functions](http://www.typescriptlang.org/docs/handbook/functions.html)
+- 如果函数没有返回值，可以使用 `void` 或者省略。
+
+http://www.typescriptlang.org/docs/handbook/functions.html#Rest Parameters
