--- a/Frontend-learning/Typescript/官方文档笔记.md
+++ b/Frontend-learning/Typescript/官方文档笔记.md
@@ -103,5 +103,31 @@
 
 ## [Functions](http://www.typescriptlang.org/docs/handbook/functions.html)
 - 如果函数没有返回值，可以使用 `void` 或者省略。
+- 关于 ts 中如何在参数中指定 this 的类型以及如何提醒别人使用该方法时不应该假设 this 时可以参考 [Functions](http://www.typescriptlang.org/docs/handbook/functions.html) 中的 this and arrow functions 之后的部分
+- 函数重载中，最具体的声明应该放在前面，最不具体的声明应该放在后面，下面的代码只有前两个是函数重载，第三个是函数实现：
+  ```ts
+  let suits = ["hearts", "spades", "clubs", "diamonds"];
 
-http://www.typescriptlang.org/docs/handbook/functions.html#Rest Parameters
+  function pickCard(x: {suit: string; card: number; }[]): number;
+  function pickCard(x: number): {suit: string; card: number; };
+  function pickCard(x): any {
+      // Check to see if we're working with an object/array
+      // if so, they gave us the deck and we'll pick the card
+      if (typeof x == "object") {
+          let pickedCard = Math.floor(Math.random() * x.length);
+          return pickedCard;
+      }
+      // Otherwise just let them pick the card
+      else if (typeof x == "number") {
+          let pickedSuit = Math.floor(x / 13);
+          return { suit: suits[pickedSuit], card: x % 13 };
+      }
+  }
+
+  let myDeck = [{ suit: "diamonds", card: 2 }, { suit: "spades", card: 10 }, { suit: "hearts", card: 4 }];
+  let pickedCard1 = myDeck[pickCard(myDeck)];
+  alert("card: " + pickedCard1.card + " of " + pickedCard1.suit);
+
+  let pickedCard2 = pickCard(15);
+  alert("card: " + pickedCard2.card + " of " + pickedCard2.suit);
+  ```
