--- a/Frontend-learning/Typescript/官方文档笔记.md
+++ b/Frontend-learning/Typescript/官方文档笔记.md
@@ -131,3 +131,132 @@
   let pickedCard2 = pickCard(15);
   alert("card: " + pickedCard2.card + " of " + pickedCard2.suit);
   ```
+
+## [Generics](http://www.typescriptlang.org/docs/handbook/generics.html)
+
+## [enums](http://www.typescriptlang.org/docs/handbook/enums.html)
+
+- 枚举类型中的初始值可以通过调用函数来设置，但是没有初始化的枚举成员必须放在第一个有初始化成员的前面。
+    ```ts
+    enum E {
+        A = getSomeValue(),
+        B, // error! 'A' is not constant-initialized, so 'B' needs an initializer // B 应该在 A 前面
+    }
+    ```
+- 数值型的枚举成员会生成双向映射，字符串型的枚举成员则不会，如：
+  ```ts
+    enum E {
+        X, Y, Z = 'a'
+    }
+  ``` 
+  会得到：
+  ```js
+    var E;
+    (function (E) {
+        E[E["X"] = 0] = "X";
+        E[E["Y"] = 1] = "Y";
+        E["Z"] = "a";
+    })(E || (E = {}));
+  ```
+- 常亮枚举（const enum）成员必须使用常量或者其他枚举变量来初始化，不能用函数来计算值，并且它在编译期间会被删除，使用常量的地方会被替换为常量最终的值：
+    ```ts
+    const enum Directions {
+        Up,
+        Down,
+        Left,
+        Right
+    }
+
+    let directions = [Directions.Up, Directions.Down, Directions.Left, Directions.Right]
+    // 生成的代码中不会有 Directions 枚举变量，所有值都被替换为最终值 var directions = [0 /* Up */, 1 /* Down */, 2 /* Left */, 3 /* Right */];
+    ```
+
+- 环境枚举（Ambient enums）假定环境中已经存在该枚举类型，不会再生成其代码，并且所有没有初始化的枚举值都会被认为是计算值（但在常量中如果某一个成员没有初始化，但它之前的成员值为常量，它也会被认为是常量）：
+    ```ts
+    declare enum Enum {
+        A = 1,
+        B,
+        C = 2
+    }
+    console.log(Enum.B);
+    // 编译后只剩 console.log(Enum.B); ，但普通枚举类型会生成对应的枚举变量
+    ```
+
+- 总结来说就是：
+
+  - 普通枚举类型会生成枚举变量
+    ```ts
+    enum Enum {
+        A = 1,
+        B = A * 2
+    }
+    console.log(Enum.B);
+    ``` 
+    编译后得到
+    ```js
+    var Enum;
+    (function (Enum) {
+        Enum[Enum["A"] = 1] = "A";
+        Enum[Enum["B"] = 2] = "B";
+    })(Enum || (Enum = {}));
+    console.log(Enum.B);
+    ```
+  - 常量枚举会把使用到枚举的地方都替换为常量值，它不能通过函数来初始化其值，只能通过常量或其他枚举常量值
+    ```ts
+    const enum Enum {
+        A = 1,
+        B = A * 2
+    }
+
+    console.log(Enum.B)
+    ``` 
+    编译后就只剩：
+    ```js
+    console.log(2 /* B */);
+    ```
+  - 环境枚举会假设环境中已经存在该枚举变量，直接使用即可，不管是否初始化：
+    ```ts
+    declare enum Enum {
+        A = 1,
+        B = A * 2
+    }
+
+    console.log(Enum.B)
+    ```
+    编译后只剩：
+    ```js
+    console.log(Enum.B);
+    ```
+
+## [Type Inference](http://www.typescriptlang.org/docs/handbook/type-inference.html)
+
+- 类型推断会选择最优类型，
+    ```ts
+    class Base {}
+
+    class A extends Base {}
+
+    class B extends Base {}
+
+    const arr1 = [new B, new A];  // arr1 的类型是 (B | A)，因为没有通用类型存在于数组中
+    const arr2 = [new B, new A, new Base];  // arr2 的类型是 Base[]
+    // 如果没有最优类型（即基类），也可以指定类型
+    const arr3: Base[] = [new B, new A];
+    ```
+- 类型推断还可能反过来进行推断，这种叫做上下文类型推断（contextually typed）：
+    ```ts
+    // 通过 onmousedown 推断出 mouseEvent 中有 button 属性，但是没有 kangaroo 属性
+    window.onmousedown = function(mouseEvent) {
+        console.log(mouseEvent.button);   //<- OK
+        console.log(mouseEvent.kangaroo); //<- Error!
+    };
+    window.onscroll = function(uiEvent) {
+        console.log(uiEvent.button); //<- Error!
+    }
+    ```
+- 如果既没有上下文类型推断，也没有指定类型，则类型为 `any`，如下面的 `uiEvent`：
+    ```ts
+    const handler = function(uiEvent) {  
+        console.log(uiEvent.button); //<- OK
+    }
+    ```
