--- a/Frontend-learning/Typescript/官方文档笔记.md
+++ b/Frontend-learning/Typescript/官方文档笔记.md
@@ -134,6 +134,114 @@
 
 ## [Generics](http://www.typescriptlang.org/docs/handbook/generics.html)
 
+
+- 泛型的使用可以让 ts 来做类型推断, 也可以指定参数类型（在一些复杂的场景中，ts 可能无法推断出类型来，则可以通过指定类型的方式告诉 ts 编译器）：
+    ```ts
+    let output = identity("myString");  // type of output will be 'string'
+    ```
+    ```ts
+    let output = identity<string>("myString");  // type of output will be 'string'
+    ```
+
+- 泛型签名的类型名可以随便定义，也可以使用对象字面量的方式定义：
+    ```ts
+    function identity<T>(arg: T): T {
+        return arg;
+    }
+
+    let myIdentity1: <U>(arg: U) => U = identity;  // 
+    let myIdentity2: {<T>(arg: T): T} = identity;  // 对象字面量签名
+    ```
+
+    ```ts
+    interface GenericIdentityFn {
+        <T>(arg: T): T;
+    }
+
+    function identity<T>(arg: T): T {
+        return arg;
+    }
+
+    let myIdentity: GenericIdentityFn = identity;  // 未限定类型，可以给 myIdentity 传递任意参数类型，如 myIdentity(1) 或者 myIdentity('string')
+    ```
+
+    ```ts
+    interface GenericIdentityFn<T> {  // 有差异，将泛型参数作为整个接口的参数，这样使得我们能够看到接口是基于何种类型的，即能够限制接口内部所有类型都使用一种类型
+        (arg: T): T;                  // 有差异
+    }
+
+    function identity<T>(arg: T): T {
+        return arg;
+    }
+
+    let myIdentity: GenericIdentityFn<number> = identity;  // 限定类型，只能给 myIdentity 传递数字参数
+    ```
+
+- 泛型类，同泛型接口，但泛型只针对类中的实例级方法，不能用于静态方法。
+
+- 泛型约束，即如果我们在泛型内访问 `.length` 属性，由于并没有任何地方表明类型 `T` 具有 `.length` 属性，因此它会报错，此时我们可以创建一个接口告诉 ts 编译器类型 T 需要有 `length`  属性，然后使用 `extends` 来约束：
+    ```ts
+    interface Lengthwise {
+        length: number;
+    }
+
+    function loggingIdentity<T extends Lengthwise>(arg: T): T {
+        console.log(arg.length);  // Now we know it has a .length property, so no more error
+        return arg;
+    }
+    loggingIdentity({length: 10, value: 3});
+    loggingIdentity(3);  // Error, number doesn't have a .length property
+    ```
+
+- 在泛型约束中使用类型参数：有时候我们希望用一个类型去约束另一个类型，如参数为一个对象和它其中的字段名：
+    ```ts
+    function getProperty<T, K extends keyof T>(obj: T, key: K) {
+        return obj[key];
+    }
+
+    let x = { a: 1, b: 2, c: 3, d: 4 };
+
+    getProperty(x, "a"); // okay
+    getProperty(x, "m"); // error: Argument of type 'm' isn't assignable to 'a' | 'b' | 'c' | 'd'.
+    ```
+
+- 在泛型中使用类类型：当在 typescript 中使用泛型来创建工厂函数实例时，需要通过构造函数来引用类的类型：
+    ```ts
+    function create<T>(c: {new(): T; }): T {
+        return new c();
+    }
+    ```
+    更高级的示例是使用 prototype 属性来推断和约束构造函数与类类型的实例端之间的关系：
+    ```ts
+    class BeeKeeper {
+        hasMask: boolean;
+    }
+
+    class ZooKeeper {
+        nametag: string;
+    }
+
+    class Animal {
+        numLegs: number;
+    }
+
+    class Bee extends Animal {
+        keeper: BeeKeeper;
+    }
+
+    class Lion extends Animal {
+        keeper: ZooKeeper;
+    }
+
+    function createInstance<A extends Animal>(c: new () => A): A {
+        return new c();
+    }
+
+    createInstance(Lion).keeper.nametag;  // typechecks!
+    createInstance(Bee).keeper.hasMask;   // typechecks!
+    ```
+
+
 ## [enums](http://www.typescriptlang.org/docs/handbook/enums.html)
 
 - 枚举类型中的初始值可以通过调用函数来设置，但是没有初始化的枚举成员必须放在第一个有初始化成员的前面。
@@ -260,3 +368,38 @@
         console.log(uiEvent.button); //<- OK
     }
     ```
+
+## [Type Compatibility](http://www.typescriptlang.org/docs/handbook/type-compatibility.html)
+
+ts 中的类型兼容是通过结构子类型来判断的，结构类型是一种仅根据其成员来确定类型的方式。
+
+```ts
+interface Named {
+    name: string;
+}
+
+class Person {
+    name: string;
+}
+
+let p: Named;
+// OK, because of structural typing
+p = new Person();
+```
+
+ts 的结构类型系统：
+1. x 兼容 y 需要 y 至少具有 x 中的成员
+2. y 中的成员类型要兼容 x 中的成员类型
+3. 该比较过程是递归的
+
+函数的类型比较：被赋值的函数变量的类型参数和返回值需要时赋值类型的子集
+
+--- 未完成 ---
+
+## [Advanced Types](http://www.typescriptlang.org/docs/handbook/advanced-types.html)
+
+
+## [modules](http://www.typescriptlang.org/docs/handbook/modules.html)
+- 包含顶级 `import` 和 `export` 的文件被当做模块，不包含的则当做脚本，脚本的内容在全局可见。
+- 为了支持CommonJS和AMD的`exports`, TypeScript提供了`export =`语法。若使用export =导出一个模块，则必须使用TypeScript的特定语法`import module = require("module")`来导入此模块。
+
