memoize-one lib

--- a/Frontend-learning/React/React 摘要/生命周期.md
+++ b/Frontend-learning/React/React 摘要/生命周期.md
@@ -40,9 +40,9 @@
 
 ## static getDerivedStateFromProps(props, state)
 
-该方法在 render 之前调用，组件挂载和之后的更新都会调用该函数。它返回一个对象用于对 state 进行更新，或者 `null` 表示什么都不更新，一般[很少使用该函数](https://reactjs.org/blog/2018/06/07/you-probably-dont-need-derived-state.html#when-to-use-derived-state)
+该方法在 **render 之前**调用，组件首次挂载以及后续的更新都会调用该函数。它返回一个对象用于对 state 进行更新，或者 `null` 表示什么都不更新，一般[很少使用该函数](https://reactjs.org/blog/2018/06/07/you-probably-dont-need-derived-state.html#when-to-use-derived-state)
 
-- 注意该方法在每次 render 之前都会调用，不管什么原因。它与 `UNSAFE_componentWillReceiveProps` 形成对比，因为 UNSAFE_componentWillReceiveProps 只会在父组件引起 rerender 时调用而不会在本地 `setState` 时调用
+- 注意该方法在每次 render 之前都会调用，不管什么原因。它与 `UNSAFE_componentWillReceiveProps` 形成对比，因为 UNSAFE_componentWillReceiveProps 只会在父组件引起 rerender 时调用而不会在本地 `setState` 时调用。如果在 UNSAFE_componentWillReceiveProps 将 props 中的属性拷贝到 state 可能导致问题，因为如果父组件 rerender 的时候，UNSAFE_componentWillReceiveProps 会被调用，此时将会执行其中的拷贝代码，从而丢失了 state 中本身的相同字段的值（该问题参考 https://reactjs.org/blog/2018/06/07/you-probably-dont-need-derived-state.html#anti-pattern-unconditionally-copying-props-to-state ）。 
 - 注意一下几点
   - 如果你需要执行一些具有副作用的操作（如数据获取和执行动画），你应该使用 `componentDidUpdate`
   - 当 prop 发生改变并希望重新计算数据时，使用 [memoization helper](https://reactjs.org/blog/2018/06/07/you-probably-dont-need-derived-state.html#what-about-memoization)
