--- a/Frontend-learning/前端个人总结/正则表达式.md
+++ b/Frontend-learning/前端个人总结/正则表达式.md
@@ -18,3 +18,42 @@
 var f = '99999999999'.replace(/\d{1,3}(?=(\d{3})+$)/g, '$&,')
 console.log(f)
 ```
+
+- `^` 如果出现在最前面，表示匹配输入字符串的最开始，并非每一行的开始，如果开启多行标志 `m` 则会匹配每一行的最开始，即紧跟换行符的字符
+- `$` 表示匹配输入字符串的最末尾字符，并非每一行的末尾，同 `^` 一样，如果开启了多行标志 `m` 则会匹配每一行的末尾，即换行符前的位置
+```js
+const str = `
+a b
+b
+c
+asdbsdf
+b`;
+
+str.match(/^b/)  // null
+str.match(/^b/m)  // ["b", index: 5, input: "↵a b↵b↵c↵asdbsdf↵b↵", groups: undefined]
+
+str.match(/b$/)   // ["b", index: 17, input: "↵a b↵b↵c↵asdbsdf↵b", groups: undefined]
+str.match(/b$/m)   // ["b", index: 3, input: "↵a b↵b↵c↵asdbsdf↵b", groups: undefined]
+```
+
+- `?` 如果紧跟在任何量词 `*`、 `+`、`?` 或 `{}` 的后面，将会使量词变为非贪婪（匹配尽量少的字符），还用于先行断言中，如本表的 `x(?=y)` 和 `x(?!y)` 条目所述
+- `.` （小数点）默认匹配除换行符之外的任何单个字符。如果 `s` 标志位被设置，则也会匹配换行符
+
+```js
+`
+`.match(/./)  // null
+
+`
+`.match(/./s)  // ["↵", index: 0, input: "↵", groups: undefined]
+```
+
+- `\n` 在正则表达式中，它返回最后的第n个子捕获匹配的子字符串(捕获的数目以左括号计数)。
+```js
+`apple, orange, cherry, peach.`.match(/apple(,)\sorange\1/)  // ["apple, orange,", ",", index: 0, input: "apple, orange, cherry, peach.", groups: undefined]
+```
+
+- `(?:x)` 非捕获
+- `x(?=y)` 先行断言，匹配`x`仅仅当`x`后面跟着`y`
+- `(?<=y)x` 后行断言，匹配`x`仅仅当`x`前面是`y`
+- `x(?!y)` 正向否则查找，仅仅当`x`后面不跟着`y`时匹配`x`
+- `(?<!y)x` 反向否定查找，仅仅当`x`前面不是`y`时匹配`x`
