--- a/Frontend-learning/Vue/工具函数.md
+++ b/Frontend-learning/Vue/工具函数.md
@@ -24,8 +24,8 @@ function cached(fn) {
  * Camelize a hyphen-delimited string.
  */
 var camelizeRE = /-(\w)/g;
-var camelize = cached(function (str) {
-  return str.replace(camelizeRE, function (_, c) {
+var camelize = cached(function(str) {
+  return str.replace(camelizeRE, function(_, c) {
     return c ? c.toUpperCase() : "";
   });
 });
@@ -61,20 +61,46 @@ export function makeMap(str: string, expectsLowerCase?: boolean): (key: string) 
   for (let i = 0; i < list.length; i++) {
     map[list[i]] = true;
   }
-  return expectsLowerCase ? (val) => map[val.toLowerCase()] : (val) => map[val];
+  return expectsLowerCase ? val => map[val.toLowerCase()] : val => map[val];
 }
 ```
 
 ## normalizeProps
 
-格式换 prop 属性，将所有属性转换成统一的格式：
+格式化 prop 属性每一项为如下 `PropOptions` 类型，并保存到 `options.props` 中：
 
 ```ts
-interface formattedProps {
-  type: unknown;
+export type Prop<T> = { (): T } | { new (...args: never[]): T & object } | { new (...args: string[]): Function };
 
+export type PropType<T> = Prop<T> | Prop<T>[];
+
+// 统一的 prop 格式
+export interface PropOptions<T = any> {
+  type?: PropType<T>;
+  required?: boolean;
+  default?: T | null | undefined | (() => T | null | undefined);
+  validator?(value: T): boolean;
 }
 ```
+
+规则如下：
+
+- 如果 props 为数组，则每一项作为键名，其值为
+
+```ts
+{
+  type: null;
+}
+```
+
+- 如果 props 为对象，则首先将键名转换成驼峰格式，然后
+  - 如果值 `val` 为对象，则假设它已经满足 `PropOptions` 接口类型，直接使用
+  - 如果值 `val` 不是对象，则转换成
+  ```ts
+  {
+    type: val;
+  }
+  ```
 
 ```ts
 /**
@@ -110,7 +136,118 @@ function normalizeProps(options: Object, vm: ?Component) {
 }
 ```
 
+## normalizeInject
+
+格式化 inject 为如下 `InjectOptions` 类型，并保存到 `options.inject` 对象中：
+
+```ts
+export type InjectKey = string | symbol;
+
+export type InjectOptions =
+  | {
+      [key: string]: InjectKey | { from?: InjectKey; default?: any };
+    }
+  | string[];
+```
+
+其规则如下：
+
+- 如果 inject 为数组，则以每一项作为键名 `key`，值为
+
+```ts
+{
+  from: key;
+}
+```
+
+- 如果 inject 为对象
+  - 如果每个属性都是对象，则保留其属性，如果没有 `from` 属性则添加 `from` 属性，其值为键名 `key`
+  - 如果不是对象，则以 `key` 作为键名，原值 `val` 会被转换为：
+  ```ts
+  {
+    from: val;
+  }
+  ```
+
+```ts
+/**
+ * Normalize all injections into Object-based format
+ */
+function normalizeInject (options: Object, vm: ?Component) {
+  const inject = options.inject
+  if (!inject) return
+  const normalized = options.inject = {}
+  if (Array.isArray(inject)) {
+    for (let i = 0; i < inject.length; i++) {
+      normalized[inject[i]] = { from: inject[i] }
+    }
+  } else if (isPlainObject(inject)) {
+    for (const key in inject) {
+      const val = inject[key]
+      normalized[key] = isPlainObject(val)
+        ? extend({ from: key }, val)
+        : { from: val }
+    }
+  } else if (process.env.NODE_ENV !== 'production') {
+    warn(
+      `Invalid value for option "inject": expected an Array or an Object, ` +
+      `but got ${toRawType(inject)}.`,
+      vm
+    )
+  }
+}
+```
+
+## normalizeDirectives
+
+格式化 directive 为如下 DirectiveOptions 类型：
+
+```ts
+export type DirectiveFunction = (el: HTMLElement, binding: DirectiveBinding, vnode: VNode, oldVnode: VNode) => void;
+
+export interface DirectiveOptions {
+  bind?: DirectiveFunction;
+  inserted?: DirectiveFunction;
+  update?: DirectiveFunction;
+  componentUpdated?: DirectiveFunction;
+  unbind?: DirectiveFunction;
+}
+```
+
+规则如下：
+
+- 如果组件 directives 每一项为函数类型，则默认该函数绑定到 `bind` 和 `update` 钩子上
+- 否则假定已经满足 `DirectiveOptions` 接口，直接使用
+
+```ts
+/**
+ * Normalize raw function directives into object format.
+ */
+function normalizeDirectives(options: Object) {
+  const dirs = options.directives;
+  if (dirs) {
+    for (const key in dirs) {
+      const def = dirs[key];
+      if (typeof def === "function") {
+        dirs[key] = { bind: def, update: def };
+      }
+    }
+  }
+}
+```
+
 ## mergeOptions
+
+将两个选项对象合并为一个，其逻辑为：
+
+- 对 props、inject、directives 进行格式化。
+- 如果 child 有 extends 选项，则递归合并 extends 选项
+- 如果 child 有 mixins 选项，则递归合并 mixins 选项中的每一项
+- 将 parent 中的每一项与 child 中对应项进行合并并保存到结果对象 options 中
+- 将 child 中存在但在 parent 中不存在的项合并到结果对象 options 中
+- 返回 options
+
+由于每个选项的合并策略不同，比如合并 components 的操作就和合并 data 的流程不一样，因此每个选项都需要有自己的合并策略。下面代码中的 strats 保存了每个选项的合并策略函数，start 为对应的合并策略函数，如当 `key` 为 `"components"` 时，strat 为 `strats["components"]` 即为合并 `"components"` 属性的函数。
 
 ```ts
 /**
