--- a/Frontend-learning/Vue/源码/2.创建 Vue 实例的过程.md
+++ b/Frontend-learning/Vue/源码/2.创建 Vue 实例的过程.md
@@ -6,14 +6,14 @@
 
 ```ts
 new Vue({
-  el: "#app",
+  el: "#app"
 });
 ```
 
 由于上一章我们已经知道，Vue 里面除了简单的环境判断和初始化语法检测，最重要的就是使用 option 作为参数调用 `_init()` 方法，我们来从 `_init()` 方法入手：
 
 ```ts
-Vue.prototype._init = function (options?: Object) {
+Vue.prototype._init = function(options?: Object) {
   const vm: Component = this;
   // a uid
   vm._uid = uid++;
