--- a/Frontend-learning/Vue/源码/1.创建 Vue 实例之前的逻辑.md
+++ b/Frontend-learning/Vue/源码/1.创建 Vue 实例之前的逻辑.md
@@ -40,8 +40,8 @@ export default Vue;
 
 - `stateMixin`
 
-  - 添加属性 `Vue.prototype.$data`
-  - 添加属性 `Vue.prototype.$props`
+  - 添加访问器属性 `Vue.prototype.$data`
+  - 添加访问器属性 `Vue.prototype.$props`
   - 添加方法 `Vue.prototype.$set`
   - 添加方法 `Vue.prototype.$delete`
   - 添加方法 `Vue.prototype.$watch`
@@ -65,7 +65,9 @@ export default Vue;
   - 添加方法 `Vue.prototype.$nextTick`
   - 添加方法 `Vue.prototype._render`
 
-以上就是最初的每个初始化函数所做的操作，我把这个操作称之为第一级初始化，完成第一级初始化之后，将 Vue 导出。
+以上就是最初的每个初始化函数所做的操作，需要注意的是 `Vue.prototype.$data` 和 `Vue.prototype.$props` 实际上是访问器属性，分别映射到 `this._data` 和 `this._props`，如果是直接定义 `Vue.prototype.$data = {}`，由于它在原型链上并且是引用类型，会造成所以实例共享该属性从而引起混乱。
+
+我把上面的初始化操作称之为第一级初始化，完成第一级初始化之后，将 Vue 导出。
 
 ---
 
@@ -188,9 +190,9 @@ export function initGlobalAPI(Vue: GlobalAPI) {
 
 执行完上面的初始化之后，再
 
-- 添加属性 `Vue.prototype.$isServer`
-- 添加属性 `Vue.prototype.$ssrContext`
-- 添加属性 `Vue.FunctionalRenderContext`
+- 添加访问器属性 `Vue.prototype.$isServer`
+- 添加访问器属性 `Vue.prototype.$ssrContext`
+- 添加访问器属性 `Vue.FunctionalRenderContext`
 - 添加属性 `Vue.version`
 
 执行完这些初始化之后，再次将 Vue 导出。
