--- a/Frontend-learning/Vue/工具函数.md
+++ b/Frontend-learning/Vue/工具函数.md
@@ -47,6 +47,91 @@ function extend(to, _from) {
 }
 ```
 
+## Vue.extend
+
+实现 Vue 的继承
+
+```ts
+/**
+ * Class inheritance
+ */
+Vue.extend = function(extendOptions: Object): Function {
+  extendOptions = extendOptions || {};
+  const Super = this;
+  const SuperId = Super.cid;
+  const cachedCtors = extendOptions._Ctor || (extendOptions._Ctor = {});
+  if (cachedCtors[SuperId]) {
+    return cachedCtors[SuperId];
+  }
+
+  const name = extendOptions.name || Super.options.name;
+  if (process.env.NODE_ENV !== "production" && name) {
+    validateComponentName(name);
+  }
+
+  const Sub = function VueComponent(options) {
+    this._init(options);
+  };
+  Sub.prototype = Object.create(Super.prototype);
+  Sub.prototype.constructor = Sub;
+  Sub.cid = cid++;
+  Sub.options = mergeOptions(Super.options, extendOptions);
+  Sub["super"] = Super;
+
+  // For props and computed properties, we define the proxy getters on
+  // the Vue instances at extension time, on the extended prototype. This
+  // avoids Object.defineProperty calls for each instance created.
+  if (Sub.options.props) {
+    initProps(Sub);
+  }
+  if (Sub.options.computed) {
+    initComputed(Sub);
+  }
+
+  // allow further extension/mixin/plugin usage
+  Sub.extend = Super.extend;
+  Sub.mixin = Super.mixin;
+  Sub.use = Super.use;
+
+  // create asset registers, so extended classes
+  // can have their private assets too.
+  ASSET_TYPES.forEach(function(type) {
+    Sub[type] = Super[type];
+  });
+  // enable recursive self-lookup
+  if (name) {
+    Sub.options.components[name] = Sub;
+  }
+
+  // keep a reference to the super options at extension time.
+  // later at instantiation we can check if Super's options have
+  // been updated.
+  Sub.superOptions = Super.options;
+  Sub.extendOptions = extendOptions;
+  Sub.sealedOptions = extend({}, Sub.options);
+
+  // cache constructor
+  cachedCtors[SuperId] = Sub;
+  return Sub;
+};
+
+function initProps(Comp) {
+  const props = Comp.options.props;
+  for (const key in props) {
+    proxy(Comp.prototype, `_props`, key);
+  }
+}
+
+function initComputed(Comp) {
+  const computed = Comp.options.computed;
+  for (const key in computed) {
+    defineComputed(Comp.prototype, key, computed[key]);
+  }
+}
+```
+
+继承逻辑：根据传入选项与当前构造函数中的选项合并，返回新的构造函数。
+
 ## makeMap
 
 创建一个字典，并返回一个闭包函数用于检测给定的字段是否存在于字典中
