--- a/Frontend-learning/Vue/源码/2.创建 Vue 实例的过程.md
+++ b/Frontend-learning/Vue/源码/2.创建 Vue 实例的过程.md
@@ -68,3 +68,39 @@ Vue.prototype._init = function(options?: Object) {
 - 调用 `initProvide(vm)`
 - 触发 `created` 钩子
 - 有条件的执行 `$mount` 挂载元素
+
+## initLifecycle(vm)
+
+先来看看代码：
+
+```ts
+export function initLifecycle(vm: Component) {
+  const options = vm.$options;
+
+  // locate first non-abstract parent
+  let parent = options.parent;
+  if (parent && !options.abstract) {
+    while (parent.$options.abstract && parent.$parent) {
+      parent = parent.$parent;
+    }
+    parent.$children.push(vm);
+  }
+
+  vm.$parent = parent;
+  vm.$root = parent ? parent.$root : vm;
+
+  vm.$children = [];
+  vm.$refs = {};
+
+  vm._watcher = null;
+  vm._inactive = null;
+  vm._directInactive = false;
+  vm._isMounted = false;
+  vm._isDestroyed = false;
+  vm._isBeingDestroyed = false;
+}
+```
+
+其主要功能是：
+
+- 找到第一个非抽象的父节点，并把自己加入到父节点的 `children` 中
