--- a/Frontend-learning/工具/正则表达式/正则表达式.md
+++ b/Frontend-learning/工具/正则表达式/正则表达式.md
@@ -37,6 +37,62 @@
 - `^` 行开始，多行模式下，还匹配换行符后的位置（作为起点）
 - `$` 行结束，多行模式下，还匹配换行符后的位置（作为终点）
 
+## 子表达式
+
+- `()` 可以表示其为子表达式
+
+## 回溯引用
+
+回溯引用即代表模式的后半部分引用在前半部分中定义的子表达式，如 `\s(\w+)\s\1`，这里的 `\1` 就代表是对前面子表达式的引用，像 `I am am Chosan` 中由于错误的输入造成两个 `am` 就可以使用这个正则匹配出 `am am`，`\n` 就代表对第 `n` 个子表达式的引用
+
+回溯引用可以替换文本，在 JavaScript 中使用 `$n` 来引用第 n 个子表达式，如 `'chosan'.replace(/(\w+)(a)(n)/, '$1e$3')`
+
+注意：
+
+- 回溯引用只能引用模式里面的子表达式
+- 通常回溯引用以 `1` 开始。在许多实现里面，第 `0` 个匹配 `\0` 可以用来代表整个正则表达式
+- 由于使用数字来引用子表达式这种情况很不稳定，一旦子表达式位置发生变化就会出现问题。因此某些实现允许使用命名捕获，格式为 `(?<captureName>pattern)`，其中的 captureName 代表捕获名，pattern 代表子表达式的匹配语法，使用命名捕获之后就可以在后面通过 `\k<captureName>` 来引用子表达式了，注意是 `\k<子表达式名称>` 的格式
+- 某些实现还支持 `\E`、`\l`、`\L`、`\u`、`\U` 来进行大小写转换。但 JavaScript 中不支持。
+
+## 前后查找
+
+前后查找只是用来找到元素但并不在结果中返回元素的方式，比如 `<h1>chosan</h1>` 我们只希望获取到 `<h1>` 与 `</h1>` 之间的文字 `chosan`，并不希望 `<h1>` 和 `</h1>` 也返回回来，如果我们这么写正则表达式 `<h1>.*</h1>` 则匹配结果中 `<h1>` 和 `</h1>` 都会出现，我们并不希望得到这些标签，因此就需要用到前后查找。
+
+再次重申一下，前后查找只是告诉正则表达式引擎，我需要匹配这些内容，但是我并不希望把他们也当做结果返回回来。
+
+正向查找的模式始终是跟在 `=` 后面，负向查找相当于是对正向查找取反，但这里并不是使用 `^` 来取反，而是直接把 `=` 换成 `!`。
+
+正向查找和负向查找都包含向前和向后，以 `http://www.chosan.cn` 举例：
+
+- 正向向前查找 `?=`
+  - 举例： 正向向前查找 `.+(?=:)` 得到 `http`，而一般的 `.+(:)` 得到的是 `http:`
+- 正向向后查找 `?<=`
+
+  - 举例： 正向向后查找 `(?<=www.).*` 得到 `chosan.cn`，而 `www(\.).*` 得到 `www.chosan.cn`
+
+  由于 JavaScript 不支持向后查找，因此使用 php 代码测试：
+
+```php
+  <?php
+    $str = "http://www.chosan.cn";
+    $isMatched = preg_match('/(?<=www.).*/', $str, $matches);
+    var_dump($isMatched, $matches);
+  ?>
+```
+
+- 负向向前查找 `?!`
+  - 相当于是对 `?=` 取反，即匹配不是子表达式中的内容，且不在结果中返回
+- 负向向后查找 `?<!`
+
+  - 相当于是对 `?<=` 取反，即匹配
+
+- 任何一个子表达式都可以转换成一个向前查找的表达式，只需要给他加一个 `?=` 即可。向前查找可以出现在模式的任意位置，且可以使用多个向前查找
+- 向前查找中的子表达式长度是可变的，即可以包含 `.` 和 `+` 之类的元字符，而向后查找模式只能是固定的，这几乎是所有正则表达式实现都遵守的限制。
+
+## 嵌入条件
+
+JavaScript 不支持
+
 ## 其它
 
 - 某些实现还支持 `\c` 前缀来指定控制符，比如说 `\cZ` 匹配 `Ctrl-Z`
