--- a/Frontend-learning/工具/正则表达式/正则表达式.md
+++ b/Frontend-learning/工具/正则表达式/正则表达式.md
@@ -43,7 +43,11 @@
 
 ## 回溯引用
 
+回溯的目的是保持前后匹配一致。
+
 回溯引用即代表模式的后半部分引用在前半部分中定义的子表达式，如 `\s(\w+)\s\1`，这里的 `\1` 就代表是对前面子表达式的引用，像 `I am am Chosan` 中由于错误的输入造成两个 `am` 就可以使用这个正则匹配出 `am am`，`\n` 就代表对第 `n` 个子表达式的引用
+
+`(?:)` 表示不捕获这个子表达式，因此就无法使用 `\1` 这种方式来引用该引用，但匹配达到的效果是一样的，只是无法回溯。
 
 回溯引用可以替换文本，在 JavaScript 中使用 `$n` 来引用第 n 个子表达式，如 `'chosan'.replace(/(\w+)(a)(n)/, '$1e$3')`
 
