--- a/Frontend-learning/工具/正则表达式/正则表达式.md
+++ b/Frontend-learning/工具/正则表达式/正则表达式.md
@@ -32,7 +32,7 @@
 ## 匹配边界
 
 - `\b` 匹配一个在能组成单词的字符（`\w`）和一个不能组成单词的字符（`\W`）之间
-- `\B` 匹配一个非单词边界，如 `chosan - zhang` 使用 `\B.\B` 就能找到 `-`
+- `\B` 匹配一个非单词边界，如 `chosan - zhang` 使用 `\B-\B` 就能找到 `-`
 
 - `^` 行开始，多行模式下，还匹配换行符后的位置（作为起点）
 - `$` 行结束，多行模式下，还匹配换行符后的位置（作为终点）
