--- a/Frontend-learning/Typescript/总结.md
+++ b/Frontend-learning/Typescript/总结.md
@@ -3,7 +3,244 @@
 
 ## 类型相关
 
-### 1. 条件类型
+### 1. 泛型
+
+- 泛型函数：
+
+```ts
+function identity<Type>(arg: Type): Type {
+  return arg;
+}
+
+// 泛型函数的类型
+let myIdentity: <Type>(arg: Type) => Type = identity;
+
+// 还可以将泛型类型写作一个对象字面量类型的调用签名
+let myIdentity: { <Type>(arg: Type): Type } = identity;
+
+// 同样可以使用接口的方式来定义泛型函数类型
+interface GenericIdentityFn {
+  <Type>(arg: Type): Type;
+}
+
+let myIdentity: GenericIdentityFn = identity;
+
+// 或者将类型从接口内部提升到接口外部，这种写法在使用的时候需要显示指定 Type 类型，但可以在接口内部任何地方使用该 Type 类型
+interface GenericIdentityFn<Type> {
+  (arg: Type): Type;
+}
+
+let myIdentity: GenericIdentityFn<number> = identity;
+```
+
+- 泛型接口：如上
+
+- 泛型类：书写形式同泛型接口，但泛型类型只作用于泛型类的实例方法或属性，类的静态成员无法使用泛型类型。
+
+#### 泛型约束
+
+以上泛型方法或者对象接收任意类型，但是有时候我们希望其类型满足某一些条件，比如它应该具有 `.length` 成员，因此我们需要对该类型进行约束 —— 使用 `extends` 关键字进行类型约束：
+
+```ts
+interface Lengthwise {
+  length: number;
+}
+
+function loggingIdentity<Type extends Lengthwise>(arg: Type): Type { // 这里使用 extends 对 Type 进行了约束，要求 Type 能够满足 Lengthwise 类型
+  console.log(arg.length); // Now we know it has a .length property, so no more error
+  return arg;
+}
+
+// 此时就不能直接传递数字给 loggingIdentity 了
+loggingIdentity(3); // 报错！
+loggingIdentity({ length: 10, value: 3 }); // OK
+```
+
+你同样可以使用一个类型参数来约束另一个类型参数，如我们希望通过对象的属性名来获取该属性的值，但是不希望不小心传入了那些不属于对象属性的属性名：
+
+```ts
+function getProperty<Type, Key extends keyof Type>(obj: Type, key: Key) {
+  return obj[key];
+}
+
+let x = { a: 1, b: 2, c: 3, d: 4 };
+
+getProperty(x, "a");
+getProperty(x, "m"); // 报错！
+// Argument of type '"m"' is not assignable to parameter of type '"a" | "b" | "c" | "d"'.
+```
+
+#### 在泛型中使用类类型
+
+在 TypeScript 中创建工厂函数的时候，需要通过构造函数来引用类的类型：
+
+```ts
+function create<Type>(c: { new (): Type }): Type {
+  return new c();
+}
+```
+
+一种更高级的用法是使用原型链属性来推断和约束构造函数和类实例的关系：
+
+```ts
+class BeeKeeper {
+  hasMask: boolean;
+}
+
+class ZooKeeper {
+  nametag: string;
+}
+
+class Animal {
+  numLegs: number;
+}
+
+class Bee extends Animal {
+  keeper: BeeKeeper;
+}
+
+class Lion extends Animal {
+  keeper: ZooKeeper;
+}
+
+function createInstance<A extends Animal>(c: new () => A): A {
+  return new c();
+}
+
+createInstance(Lion).keeper.nametag;
+createInstance(Bee).keeper.hasMask;
+```
+
+这种模式用于增强 [mixins](https://www.typescriptlang.org/docs/handbook/mixins.html) 设计模式。
+
+#### 泛型总结
+
+实际上在 TypeScript 中，`extends` 关键字不管在哪里都可以理解为类型测试 —— 即测试它左边的类型是否满足右边的类型。
+
+### 2. keyof 操作符
+
+`keyof` 操作符将一个对象类型转换成其键名的字符串或者数字字面量类型的联合类型。
+
+```ts
+type Point = { x: number; y: number };
+type P = keyof Point; // 'x' | 'y'
+```
+
+如果类型具有字符串或者数字的索引签名，则 `keyof` 也会返回这些类型：
+
+```ts
+type Arrayish = { [n: number]: unknown };
+type A = keyof Arrayish;
+//   ^ = type A = number
+
+type Mapish = { [k: string]: boolean };
+type M = keyof Mapish; // 由于 JavaScript 对象索引始终会被转换成字符串，因此 `obj[0]` 与 `obj["0"]` 相同，所以 M 可以是 number 类型
+//   ^ = type M = string | number
+```
+
+### 3. typeof 类型操作符
+
+JavaScript 中本身已经有 typeof 操作符了，但是 TypeScript 将 typeof 操作符添加到了类型上下文中用以引用变量或者属性的类型：
+
+```ts
+let s = "hello";
+let n: typeof s;
+//  ^ = let n: string
+```
+
+理解什么是值、什么又是类型非常重要：
+```ts
+function f() {
+  return { x: 10, y: 3 };
+}
+type P = ReturnType<f>; // 报错！
+// 'f' refers to a value, but is being used as a type here. Did you mean 'typeof f'?
+
+type P = ReturnType<typeof f>; // OK！
+//   ^ = type P = {
+//       x: number;
+//       y: number;
+//   }
+```
+
+TypeScript 刻意限制了一些使用 typeof 的情况，具体来说，它只能用于标识符（如变量名）或者其属性。这有助于避免一些迷惑人的错误：
+
+```ts
+// Meant to use = ReturnType<typeof msgbox>
+let shouldContinue: typeof msgbox("Are you sure you want to continue?"); // 报错！
+// ',' expected.
+```
+
+### 4. 索引访问类型
+
+索引访问类型和属性访问一样，只不过它作用域类型上，是用于获取某个类型中特定属性的类型：
+
+```ts
+type Person = { age: number; name: string; alive: boolean };
+type Age = Person["age"]; // 使用索引访问类型获取 Person 中 age 属性的类型
+//   ^ = type Age = number
+```
+
+索引本身也是一个类型，因此我们可以使用联合类型、keyof、其他类型作为索引：
+
+```ts
+type I1 = Person["age" | "name"];
+//   ^ = type I1 = string | number
+
+type I2 = Person[keyof Person];
+//   ^ = type I2 = string | number | boolean
+
+type AliveOrName = "alive" | "name";
+type I3 = Person[AliveOrName];
+//   ^ = type I3 = string | boolean
+```
+
+当使用不存在的属性来作为索引时会得到 TypeScript 报错提醒。
+
+我们可以使用任意类型作为索引，因此我们完全可以使用 `number` 类型来获取数组元素的类型（如果类型不同，则返回联合类型）：
+
+```ts
+const MyArray = [
+  { name: "Alice", age: 15 },
+  { name: "Bob", age: 23 },
+  { name: "Eve", age: 38 },
+];
+
+type Person = typeof MyArray[number];
+//   ^ = type Person = {
+//       name: string;
+//       age: number;
+//   }
+type Age = typeof MyArray[number]["age"];
+//   ^ = type Age = number
+// Or
+type Age2 = Person["age"];
+//   ^ = type Age2 = number
+```
+
+#### 索引访问类型总结
+
+索引访问类型书写格式和属性访问一样，只不过索引是类型，且可以是任意类型。如果是联合类型，则返回联合类型中每个索引的类型的联合类型。由于索引本身也是类型，因此能够使用 `number` 获取数组中具体元素的类型集合。经过测试，使用 `number` 和使用特定数字没有任何区别：
+
+```ts
+const MyArray = [
+  { name: "Alice", age: 15 },
+  { name: "Bob", age: 23 },
+  { name: "Eve", age: 38 , x: true }, // 添加了一个 x 属性
+];
+
+type Person = typeof MyArray[0]; // 得到的类型同样是索引元素类型的联合类型，而非第 0 项元素的类型
+//   ^ = type Person = {
+//            name: string;
+//            age: number;
+//            x?: undefined;
+//        } | {
+//            name: string;
+//            age: number;
+//            x: boolean;
+//        }
+```
+### 5. 条件类型
 
 有时候确定某个类型的时候需要根据输入的类型来动态判断，这就要用到条件类型。
 
@@ -149,7 +386,7 @@ type StrOrNumArr = ToArrayNonDist<string | number>;
 //   ^ = type StrOrNumArr = (string | number)[]
 ```
 
-### 2. 映射类型
+### 6. 映射类型
 
 映射类型是基于索引签名的语法：
 
@@ -296,7 +533,7 @@ type ObjectsNeedingGDPRDeletion = ExtractPII<DBFields>;
 值部分可以搭配其他的类型特性，如条件类型等。
 
 
-### 模板字面量类型
+### 7. 模板字面量类型
 
 模板字面量类型基于 [字符串字面量类型](https://www.typescriptlang.org/docs/handbook/2/everyday-types.html#literal-types)，但是能够通过联合类型展开成很多字符串字面量类型。
 
