--- a/Frontend-learning/Typescript/总结.md
+++ b/Frontend-learning/Typescript/总结.md
@@ -101,6 +101,36 @@ handleRequest(req.url, req.method as "GET");
 const req = { url: "https://example.com", method: "GET" } as const; // 整个 req 的类型被锁定
 ```
 
+---
+
+- `null` 和 `undefined`
+  
+Typescript 同样具有 JavaScript 中的 null 和 undefined，其表现和是否开启 `strictNullChecks` 选项相关。
+
+  - 关闭 `strictNullChecks`：可能是 null 或者 undefined 的值也能够正常访问，且 null 和 undefined 可以赋值给任意类型。
+  - 开启 `strictNullChecks`：那些可能是 null 或者 undefined 的值需要在代码中进行检测：
+
+      ```ts
+          function doSomething(x: string | undefined) {
+        if (x === undefined) {
+          // do nothing
+        } else {
+          console.log("Hello, " + x.toUpperCase());
+        }
+      }
+      ```
+
+- Non-null 断言操作符`!`：
+
+当我们确定某些值不会是 null 或者 undefined 的时候，可以添加 `!` 后缀指明这些值不会是 null 或者 undefined。
+
+```ts
+function liveDangerously(x?: number | undefined) {
+  // No error
+  console.log(x!.toFixed());
+}
+```
+
 ## 类型相关
 
 ### 1. 泛型
