--- a/Dart/阅读总结.md
+++ b/Dart/阅读总结.md
@@ -450,3 +450,52 @@ switch (command) {
 ```
 
 ## [Assert](https://dart.dev/guides/language/language-tour#assert)
+
+Dart 提供了 [Exception](https://api.dart.dev/stable/dart-core/Exception-class.html)  和 [Error](https://api.dart.dev/stable/dart-core/Error-class.html) 类型和一些预定义的子类，你也可以定义自己的错误类型。但是 Dart 可以抛出任意非 null 作为异常 —— 不仅是 Exception 和 Error 对象。
+
+```dart
+throw FormatException('Expected at least 1 section');
+// 抛出任意值
+throw 'Out of llamas!';
+```
+
+---
+
+- Catch
+
+可以捕获多个错误，可以分别或者同时使用 `on` 和 `catch`，使用 `on` 表示你想指定异常类型，使用 `catch` 表示你想要得到异常对象：
+
+```dart
+try {
+  breedMoreLlamas();
+} on OutOfLlamasException {
+  // A specific exception
+  buyMoreLlamas();
+} on Exception catch (e) {
+  // Anything else that is an exception
+  print('Unknown exception: $e');
+} catch (e) {
+  // No specified type, handles all
+  print('Something really unknown: $e');
+}
+```
+
+可以给 `catch` 指定两个参数，第一个是抛出的异常，第二个是堆栈跟踪信息([StackTrace](https://api.dart.dev/stable/dart-core/StackTrace-class.html)对象)，同时还可以使用 `rethrow` 继续抛出异常：
+
+```dart
+try {
+  // ···
+} on Exception catch (e) {
+  print('Exception details:\n $e');
+} catch (e, s) {
+  print('Exception details:\n $e');
+  print('Stack trace:\n $s');
+  rethrow; // 继续抛出异常，使得调用者可以获得异常信息
+}
+```
+
+- `finally` 同 JavaScript `finally`，可以只有 `try` 和 `finally` 而没有 `catch`
+
+---
+
+## [Classes](https://dart.dev/guides/language/language-tour#classes)
