--- a/Dart/阅读总结.md
+++ b/Dart/阅读总结.md
@@ -499,3 +499,872 @@ try {
 ---
 
 ## [Classes](https://dart.dev/guides/language/language-tour#classes)
+
+Dart 中任何事物都是类的实例，除了 Null 其他都源自 [Object](https://api.dart.dev/stable/dart-core/Object-class.html)。
+
+- 使用构造函数
+
+使用构造函数创建类的实例。构造函数名可以是 ClassName 或者 ClassName.identifier，如：
+
+```dart
+// new 都可以省略
+var p1 = new Point(2, 2);
+var p2 = new Point.fromJson({'x': 1, 'y': 2});
+```
+
+一些类提供了 [常量构造函数](https://dart.dev/guides/language/language-tour#constant-constructors) 用于创建编译期常量实例，在构造函数前使用 `const` 来创建实例，编译期常量只会创建一个，多次创建返回相同常量：
+
+```dart
+var a = const ImmutablePoint(1, 1);
+var b = const ImmutablePoint(1, 1);
+
+assert(identical(a, b)); // They are the same instance!
+```
+
+如果已经是常量上下文，则可以省略构造函数前的 `const`，因为 Dart 2 中常量上下文中的 const 是可以省略的：
+
+```dart
+// Lots of const keywords here.
+const pointAndLine = const {
+  'point': const [const ImmutablePoint(0, 0)],
+  'line': const [const ImmutablePoint(1, 10), const ImmutablePoint(-2, 11)],
+};
+// 等同于下面的
+
+const pointAndLine = { // 只需要一个 const，它创建了常量上下文
+  'point': [ImmutablePoint(0, 0)],
+  'line': [ImmutablePoint(1, 10), ImmutablePoint(-2, 11)],
+};
+```
+
+---
+
+- 获得对象类型
+
+使用 Object 提供的 `runtimeType` 在运行时获得对象类型，它返回一个 [Type](https://api.dart.dev/stable/dart-core/Type-class.html) 对象：
+
+```dart
+print('The type of a is ${a.runtimeType}');
+```
+
+---
+
+- 实例属性
+
+未初始化的实例属性初始值为 null，所有属性会初始化一个隐式 getter 方法。非 final 实例属性和 late final 实例属性还会有一个隐式 setter 方法，参考 [Getters and setters](https://dart.dev/guides/language/language-tour#getters-and-setters)：
+
+```dart
+class Point {
+  double? x; //初始值为 null
+  double? y; // 初始值为 null
+  double z = 0; // 初始值为 0
+}
+```
+
+如果在声明的地方初始化非 late 属性，则值是在创建的时候设置上的，这发生在构造函数和初始化执行之前！
+
+实例属性可以是 final，这种情况下它们至少被设置一次值。通过构造函数参数或者[构造函数初始化列表](https://dart.dev/guides/language/language-tour#initializer-list)来初始化 final、非 late 属性：
+
+```dart
+class ProfileMark {
+  final String name;
+  final DateTime start = DateTime.now();
+
+  ProfileMark(this.name);
+  ProfileMark.unnamed() : name = '';
+}
+```
+
+如果你希望在构造函数执行之后赋值可以使用 `late final` 来定义 final 属性，但要[小心](https://dart.dev/guides/language/effective-dart/design#avoid-public-late-final-fields-without-initializers)。
+
+---
+
+- 构造函数
+
+构造函数名称和类名相同
+
+```dart
+class Point {
+  double x = 0;
+  double y = 0;
+
+  Point(this.x, this.y); // 语法糖，发生在构造函数体执行之前，等同于接收 x,y 参数并通过 this.x = x; 和 this.y = y; 来初始化值
+}
+```
+
+- 默认构造函数：如果你没有声明构造函数，则 Dart 会提供一个默认构造函数。默认的构造函数没有参数，它会调用父类的无参构造函数
+
+- 构造函数不会继承：子类不会继承父类的构造函数。没有声明构造函数的子类只有一个没有参数、无名的构造函数
+
+- 具名构造函数：使用具名构造函数能够在某些情况具有更好的语义：
+
+```dart
+class Point {
+  double x = 0;
+  double y = 0;
+
+  Point(this.x, this.y);
+
+  // Named constructor
+  Point.origin()
+      : x = xOrigin,
+        y = yOrigin;
+}
+```
+
+重申一遍：构造函数不会继承，也就表示子类不会继承父类的具名构造函数，如果你希望子类使用父类的具名构造函数，你需要在子类中实现。
+
+- 调用父类的非默认构造函数
+
+默认情况下，子类构造函数在函数开始的时候调用父类的非具名、无参构造函数。如果有初始化列表，则初始化列表在调用父类构造函数之前执行。其顺序满足：
+  - 初始化列表
+  - 父类无参构造函数
+  - 自身的无参构造函数
+
+如果父类没有无名、无参的构造函数，则你需要手动调用父类的构造函数。在构造函数体前通过 `:` 指定父类的构造函数：
+
+```dart
+class Person {
+  String? firstName;
+
+  Person.fromJson(Map data) {
+    print('in Person');
+  }
+}
+
+class Employee extends Person {
+  // Person 没有默认构造函数，你必须指定使用父类的哪个构造函数
+  Employee.fromJson(Map data) : super.fromJson(data) { // 通过 : 指定使用父类的具名构造函数
+    print('in Employee');
+  }
+}
+
+void main() {
+  var employee = Employee.fromJson({});
+  print(employee);
+  // Prints:
+  // in Person
+  // in Employee
+  // Instance of 'Employee'
+}
+```
+
+- 初始化列表
+
+除了调用父类的构造函数，还可以在执行构造函数体之前初始化实例属性，使用`,` 分隔多个初始化器：
+
+```dart
+// Initializer list sets instance variables before
+// the constructor body runs.
+Point.fromJson(Map<String, double> json)
+    : x = json['x']!,
+      y = json['y']! {
+  print('In Point.fromJson(): ($x, $y)');
+}
+```
+
+在开发阶段还可以在初始化器中使用 assert 来进行断言:
+
+```dart
+Point.withAssert(this.x, this.y) : assert(x >= 0) {
+  print('In Point.withAssert(): ($x, $y)');
+}
+```
+
+初始化列表用于设置 final 字段非常有用：
+
+```dart
+import 'dart:math';
+
+class Point {
+  final double x;
+  final double y;
+  final double distanceFromOrigin;
+
+  Point(double x, double y)
+      : x = x,
+        y = y,
+        distanceFromOrigin = sqrt(x * x + y * y);
+}
+
+void main() {
+  var p = Point(2, 3);
+  print(p.distanceFromOrigin);
+}
+```
+
+- 重定向构造函数
+
+某些构造函数只是代理到另一个构造函数。重定向构造函数函数体为空，并在 `:` 后面调用其它构造函数：
+
+```dart
+class Point {
+  double x, y;
+
+  // The main constructor for this class.
+  Point(this.x, this.y);
+
+  // Delegates to the main constructor.
+  Point.alongXAxis(double x) : this(x, 0);
+}
+```
+
+- 常量构造函数
+
+如果实例永远不会发生改变，则可以让它们成为编译期常量。定义 `const` 构造函数并确保所有属性都是 final：
+
+```dart
+class ImmutablePoint {
+  static const ImmutablePoint origin = ImmutablePoint(0, 0);
+
+  final double x, y;
+
+  const ImmutablePoint(this.x, this.y);
+}
+
+const point = const ImmutablePoint(1, 1); // 使用常量构造函数创建编译器常量
+```
+
+- 构造函数工厂
+
+使用 `factory` 关键字来创建一个构造函数，该构造函数并不总是返回一个自身新的实例，例如它可能从缓存中获取、返回一个子类的实例等。
+
+另一个使用 factory 构造函数的场景是在初始化列表中加入逻辑来初始化 final 属性。
+
+下面的例子中，Logger factory 构造函数从缓存返回对象，Logger.fromJson factory 构造函数初始化一个 final 属性：
+
+```dart
+class Logger {
+  final String name;
+  bool mute = false;
+
+  // _cache 是本库的私有变量，因为它是以 _ 开头的
+  static final Map<String, Logger> _cache =
+      <String, Logger>{};
+
+  factory Logger(String name) {
+    return _cache.putIfAbsent(
+        name, () => Logger._internal(name));
+  }
+
+  factory Logger.fromJson(Map<String, Object> json) {
+    return Logger(json['name'].toString());
+  }
+
+  Logger._internal(this.name);
+
+  void log(String msg) {
+    if (!mute) print(msg);
+  }
+}
+
+// 使用 factory 构造函数
+var logger = Logger('UI');
+logger.log('Button clicked');
+
+var logMap = {'name': 'UI'};
+var loggerJson = Logger.fromJson(logMap);
+```
+
+            factory 构造函数不能访问 this
+
+---
+
+### 方法
+
+- 实例方法
+
+实例方法可以访问对象属性和 this：
+
+```dart
+import 'dart:math';
+
+const double xOrigin = 0;
+const double yOrigin = 0;
+
+class Point {
+  double x = 0;
+  double y = 0;
+
+  Point(this.x, this.y);
+
+  double distanceTo(Point other) {
+    var dx = x - other.x; // 直接通过 x 访问，而非 this.x
+    var dy = y - other.y;
+    return sqrt(dx * dx + dy * dy);
+  }
+}
+```
+
+---
+
+- 操作符：即重载运算符
+
+以下运算符可以重载：
+            <	+	|	[]
+            >	/	^	[]=
+            <=	~/	&	~
+            >=	*	<<	==
+            –	%	>>
+
+像 `!=` 这样的没有出现在上面的列表中，因为 `e1 != e2` 实际上是 `!(e1 == e2)` 的语法糖
+
+操作符重载使用内置的 `operator`，下面是 `+` 和 `-` 的实现：
+
+```dart
+class Vector {
+  final int x, y;
+
+  Vector(this.x, this.y);
+
+  Vector operator +(Vector v) => Vector(x + v.x, y + v.y); // 重载 + 操作符
+  Vector operator -(Vector v) => Vector(x - v.x, y - v.y); // 重载 - 操作符
+
+  // Operator == and hashCode not shown.
+  // ···
+}
+
+void main() {
+  final v = Vector(2, 3);
+  final w = Vector(2, 2);
+
+  assert(v + w == Vector(4, 5));
+  assert(v - w == Vector(0, 1));
+}
+```
+
+---
+
+- getter 和 setter
+
+```dart
+class Rectangle {
+  double left, top, width, height;
+
+  Rectangle(this.left, this.top, this.width, this.height);
+
+  // Define two calculated properties: right and bottom.
+  double get right => left + width;
+  set right(double value) => left = value - width;
+  double get bottom => top + height;
+  set bottom(double value) => top = value - height;
+}
+
+void main() {
+  var rect = Rectangle(3, 4, 20, 15);
+  assert(rect.left == 3);
+  rect.right = 12;
+  assert(rect.left == -8);
+}
+```
+
+            不管是否定义了 getter，像 ++ 这样的操作符只会调用一次 getter，然后将值存入临时变量中，这能避免一些不希望出现的副作用，从而使得代码按照预期工作
+
+---
+
+- 抽象方法
+
+实例、getter 和 setter 方法都可以是抽象的。抽象方法只能存在于抽象类中。只定义而不实现：
+
+```dart
+abstract class Doer {
+  void doSomething(); // 定义抽象方法
+}
+
+class EffectiveDoer extends Doer {
+  void doSomething() {
+    // 此处实现了该方法，使得该方法不再是抽象方法
+  }
+}
+```
+
+---
+
+- 抽象类
+
+使用 abstract 来定义抽象类。抽象类不能被实例化。抽象类多用于定义接口以及包含部分实现。可以定义一个 factory 构造函数让抽象类看起来可实例化。
+
+```dart
+// 使用 abstract 定义抽象类
+abstract class AbstractContainer {
+  // Define constructors, fields, methods...
+
+  void updateChildren(); // 抽象方法
+}
+```
+
+---
+
+- 隐式接口
+
+一个类相当于隐式定义了一个接口，这个接口包含该类所有的实例成员以及它实现的任何接口。如果你希望创建一个 A 类支持 B 类的 API 单不继承自 B 类的实现，则 A 类应该实现(implement) B 接口：
+
+```dart
+class Point implements Comparable, Location {...}
+```
+
+如：
+
+```dart
+// A person. The implicit interface contains greet().
+class Person {
+  // In the interface, but visible only in this library.
+  final _name;
+
+  // Not in the interface, since this is a constructor.
+  Person(this._name);
+
+  // In the interface.
+  String greet(String who) => 'Hello, $who. I am $_name.';
+}
+
+// An implementation of the Person interface.
+class Impostor implements Person { // 将 Person 作为接口实现其属性和方法
+  get _name => '';
+
+  String greet(String who) => 'Hi $who. Do you know who I am?';
+}
+
+String greetBob(Person person) => person.greet('Bob');
+
+void main() {
+  print(greetBob(Person('Kathy')));
+  print(greetBob(Impostor()));
+}
+```
+
+---
+
+- 类的继承
+
+使用 `extends` 来创建一个子类，通过 `super` 引用父类：
+
+```dart
+class Television {
+  void turnOn() {
+    _illuminateDisplay();
+    _activateIrSensor();
+  }
+  // ···
+}
+
+class SmartTelevision extends Television {
+  void turnOn() {
+    super.turnOn();
+    _bootNetworkInterface();
+    _initializeMemory();
+    _upgradeApps();
+  }
+  // ···
+}
+```
+
+- 成员覆盖
+
+子类能够使用 `@override` 来覆盖包括操作符在内的成员方法、属性、getter、setter 等。
+
+```dart
+class SmartTelevision extends Television {
+  @override
+  void turnOn() {...}
+  // ···
+}
+```
+
+To narrow the type of a method parameter or instance variable in code that is [type safe](https://dart.dev/guides/language/type-system), you can use the covariant [keyword](https://dart.dev/guides/language/sound-problems#the-covariant-keyword).
+
+如果你重载了 `==`，那你也应该重载 Object 的 `hashCode` getter。参考 [Implementing map keys](https://dart.dev/guides/libraries/library-tour#implementing-map-keys)
+
+---
+
+- `noSuchMethod()`
+
+当希望对调用不存在的实例方法做出响应的时候，你可以覆盖 `noSuchMethod()`：
+
+```dart
+class A {
+  // Unless you override noSuchMethod, using a
+  // non-existent member results in a NoSuchMethodError.
+  @override
+  void noSuchMethod(Invocation invocation) {
+    print('You tried to use a non-existent member: ' +
+        '${invocation.memberName}');
+  }
+}
+```
+
+你不能调用未实现的方法，除非满足一下条件之一：
+
+- The receiver has the static type `dynamic`
+- The receiver has a static type that defines the unimplemented method (abstract is OK), and the dynamic type of the receiver has an implemention of `noSuchMethod()` that’s different from the one in class `Object`
+
+更多信息参考 [noSuchMethod forwarding specification](https://github.com/dart-lang/sdk/blob/master/docs/language/informal/nosuchmethod-forwarding.md)
+
+---
+
+- 扩展方法
+
+扩展方法是向已存在的库中添加功能的一种方式。可能你正在使用，但你并没有意识到。例如，它们在 IDE 中和获得推荐的常规方法一同出现。
+
+```dart
+import 'string_apis.dart';
+...
+print('42'.padLeft(5)); // 使用字符串方法.
+print('42'.parseInt()); // 在 String 上使用来自 string_apis.dart 中定义的扩展方法 parseInt
+```
+
+更多信息参考 [extension methods page](https://dart.dev/guides/language/extension-methods)
+
+---
+
+- 枚举类型：dart 中同样使用 `enum` 来定义
+
+每个枚举值都有一个返回以 0 开始的下标的 index getter
+
+```dart
+enum Color { red, green, blue }
+
+assert(Color.red.index == 0); // index getter
+assert(Color.green.index == 1);
+assert(Color.blue.index == 2);
+```
+
+获取所有枚举值的列表可以通过枚举的 values 常量来完成： 
+
+```dart
+List<Color> colors = Color.values; // 获取枚举 Color 中的所有值组成的列表
+assert(colors[2] == Color.blue);
+```
+
+在 switch 中使用时，如果没有处理枚举的所有情况则会看到警告：
+
+```dart
+var aColor = Color.blue;
+
+switch (aColor) {
+  case Color.red:
+    print('Red as roses!');
+    break;
+  case Color.green:
+    print('Green as grass!');
+    break;
+  default: // Without this, you see a WARNING.
+    print(aColor); // 'Color.blue'
+}
+```
+
+你不能显式的实例化一个枚举的值。
+
+---
+
+- 使用 mixin 给类添加特性
+
+mixin 是在多继承的时候复用类代码的一种方式
+
+使用 `with` 关键字来使用 mixin。
+
+```dart
+class Maestro extends Person
+    with Musical, Aggressive, Demented { // 通过 with 来使用 mixin
+  Maestro(String maestroName) {
+    name = maestroName;
+    canConduct = true;
+  }
+}
+```
+
+使用 `mixin` 关键字来定义一个 mixin 并实现，它没有构造函数：
+
+```dart
+mixin Musical {
+  bool canPlayPiano = false;
+  bool canCompose = false;
+  bool canConduct = false;
+
+  void entertainMe() {
+    if (canPlayPiano) {
+      print('Playing piano');
+    } else if (canConduct) {
+      print('Waving hands');
+    } else {
+      print('Humming to self');
+    }
+  }
+}
+```
+
+有时候你可能希望限制使用 mixin 的类型，使用 `on` 来限制哪些类可以使用该 mixin：
+
+```dart
+class Musician {
+  // ...
+}
+mixin MusicalPerformer on Musician {
+  // ...
+}
+class SingerDancer extends Musician with MusicalPerformer { // 因为 SingerDancer 继承自 Musician，因此它可以使用 MusicalPerformer mixin
+  // ...
+}
+```
+
+---
+
+- 静态属性和方法：同 JavaScript 一样使用 `static` 来定义类的静态属性和方法
+
+静态属性只有在被使用的时候才会被初始化。
+
+```dart
+class Queue {
+  static const initialCapacity = 16;
+  // ···
+}
+
+void main() {
+  assert(Queue.initialCapacity == 16);
+}
+```
+
+You can use static methods as compile-time constants. For example, you can pass a static method as a parameter to a constant constructor.
+
+---
+
+## 泛型
+
+定义泛型和 Typescript 一样：
+
+```dart
+abstract class Cache<T> { // 为了演示简单，使用 abstract 
+  T getByKey(String key);
+  void setByKey(String key, T value);
+}
+```
+
+
+```dart
+// 泛型与集合字面量：
+var names = <String>['Seth', 'Kathy', 'Lars'];
+var uniqueNames = <String>{'Seth', 'Kathy', 'Lars'};
+var pages = <String, String>{
+  'index.html': 'Homepage',
+  'robots.txt': 'Hints for web robots',
+  'humans.txt': 'We are people, not machines'
+};
+
+// 泛型与构造函数
+var nameSet = Set<String>.from(names);
+var views = Map<int, View>();
+```
+
+- 泛型与类型
+
+运行时检测泛型类型：
+
+```dart
+var names = <String>[];
+names.addAll(['Seth', 'Kathy', 'Lars']);
+print(names is List<String>); // 检测泛型类型
+```
+
+--- 
+
+- 泛型约束：使用 `extends` 关键字，同 Typescript 泛型约束
+
+```dart
+class Foo<T extends SomeBaseClass> { // 使用 extends 约定 T 需要满足 SomeBaseClass 或其子类
+  // Implementation goes here...
+  String toString() => "Instance of 'Foo<$T>'";
+}
+
+class Extender extends SomeBaseClass {...}
+
+var someBaseClassFoo = Foo<SomeBaseClass>();
+var extenderFoo = Foo<Extender>();
+
+var foo = Foo();
+print(foo); // Instance of 'Foo<SomeBaseClass>'
+
+var foo = Foo<Object>(); // 报错！因为 Object 不是 SomeBaseClass 或其子类型
+```
+
+---
+
+- 使用泛型方法和函数
+
+期初，Dart 泛型只支持类。现在支持在函数和方法上使用类型参数来编写泛型：
+
+```dart
+T first<T>(List<T> ts) {
+  // Do some initial work or error checking, then...
+  T tmp = ts[0];
+  // Do some additional checking or processing...
+  return tmp;
+}
+```
+
+---
+
+## 库与可见性
+
+`import` 和 `library` 指令可以帮助你构建模块。
+
+library 不仅可以提供 API，还是一个单元：以 `_` 开头的标识符仅在该库中可见。
+
+每个 Dart 应用都是一个库，即使它没有使用 `library` 指令。
+
+库可以通过 [packages](https://dart.dev/guides/packages) 进行发布。
+
+---
+
+- 使用 library
+
+通过 `import "dart:html"` 这种模式来使用其它库。
+
+对于内置库，需要以 `dart:` 的模式引入。
+
+对于其它库，你可以使用文件系统路径或者 `package:` 模式。package 模式用于那些诸如 pub 等第三方包管理工具管理的库。
+
+```dart
+import 'package:lib1/lib1.dart'; // 常规引入方式
+import 'package:lib2/lib2.dart' as lib2; // 命名
+// Import only foo.
+import 'package:lib1/lib1.dart' show foo; // 仅引入 foo
+// Import all names EXCEPT foo.
+import 'package:lib2/lib2.dart' hide foo; // 仅不引入 foo
+```
+
+---
+
+- 懒加载
+
+延迟加载又称为懒加载。它在需要的时候才进行加载，例如你希望:
+- 优化 web 应用的启动时间
+- 执行 A/B 测试
+- 载入一些很少使用的功能，如屏幕和弹窗等
+
+只有 dart2js 支持延迟加载。Flutter、Dart VM 和 dartdevc 不支持延迟加载
+
+使用懒加载：
+
+1. 使用 `deferred as` 导入
+
+2. 需要使用的时候使用 `loadLibrary()` 来如模块，你可以多次调用 `loadLibrary()`，但是它只会加载一次
+
+```dart
+import 'package:greetings/hello.dart' deferred as hello;
+
+Future greet() async {
+  await hello.loadLibrary();
+  hello.printGreeting();
+}
+```
+
+另外需要记住的几点：
+- 你不能在导入的文件中使用沿支架在的模块的类型。你应该考虑将类型提取为公共部分，在两个模块中分别导入类型
+- Dart 在使用 `deferred as namespace` 的名字空间中隐式插入了 `loadLibrary()`，该方法返回一个 [Future](https://dart.dev/guides/libraries/library-tour#future)
+
+
+---
+
+- 创建一个库 
+
+参考 [如何创建一个 package](https://dart.dev/guides/libraries/create-library-packages) 来了解：
+- 如果组织库代码结构
+- 如果使用 `export` 指令
+- 何时使用 `part` 指令
+- 何时使用 `library` 指令
+- 如果使用条件引入、导出来支持多平台
+
+---
+
+## 异步
+
+Dart 库中大量使用了 [Future](https://api.dart.dev/stable/dart-async/Future-class.html) 和 [Stream](https://api.dart.dev/stable/dart-async/Stream-class.html)。这些方法是异步的，它们会等待操作完成才返回。
+
+同 JavaScript 一样，Dart 中使用 `async` 和 `await` 来支持异步编程。
+
+---
+
+- 处理 Future
+
+当你需要 Future 结果时，你需要：
+- 使用 async 和 await
+- 使用 Future API，[这里有介绍](https://dart.dev/guides/libraries/library-tour#future)
+
+```dart
+Future checkVersion() async {
+  var version = await lookUpVersion();
+  // Do something with version
+}
+```
+
+参考 [asynchronous programming codelab](https://dart.dev/codelabs/async-await)
+
+---
+
+- 处理 Stream
+
+当你需要从 Stream 上获取值时，你需要：
+- 使用 async 和异步循环(await for)
+- 使用 Stream API，[这里有讲解](https://dart.dev/guides/libraries/library-tour#stream)
+
+```dart
+await for (varOrType identifier in expression) {
+  // 每当 stream 产生值的时候就会执行，当 stream 关闭时停止，也可以使用 break 和 return 提前终止
+}
+```
+
+更多异步编程的资料参考 [dart:async](https://dart.dev/guides/libraries/library-tour#dartasync---asynchronous-programming) 章节。
+
+---
+
+## 生成器
+
+当你需要以懒模式产生值时，可以考虑使用生成器 generator。Dart 内置了两种生成器函数：
+- 同步生成器，返回 [Iterable](https://api.dart.dev/stable/dart-core/Iterable-class.html) 对象
+- 异步生成器，返回 [Stream](https://api.dart.dev/stable/dart-async/Stream-class.html) 对象
+
+实现同步生成器函数使用 `sync*`，然后使用 yield 来产生值：
+
+```dart
+Iterable<int> naturalsTo(int n) sync* {
+  int k = 0;
+  while (k < n) yield k++;
+}
+```
+
+实现异步生成器函数，使用 `async*`，同样也使用 yield 来产生值：
+
+```dart
+Stream<int> asynchronousNaturalsTo(int n) async* {
+  int k = 0;
+  while (k < n) yield k++;
+}
+```
+
+嵌套生成器函数使用 `yield*`：
+
+```dart
+Iterable<int> naturalsDownFrom(int n) sync* {
+  if (n > 0) {
+    yield n;
+    yield* naturalsDownFrom(n - 1);
+  }
+}
+```
+
+---
+
+## 可调用的类
+
+如果想要 Dart 类的实例可以像函数那样调用，可以实现其 `call()` 方法。
+
+```dart
+class WannabeFunction {
+  String call(String a, String b, String c) => '$a $b $c!'; // 实现 call 方法使得其实例可以像函数那样调用
+}
+
+var wf = WannabeFunction();
+var out = wf('Hi', 'there,', 'gang');
+
+main() => print(out);
+```
