--- a/Dart/阅读总结.md
+++ b/Dart/阅读总结.md
@@ -897,7 +897,7 @@ abstract class AbstractContainer {
 
 - 隐式接口
 
-一个类相当于隐式定义了一个接口，这个接口包含该类所有的实例成员以及它实现的任何接口。如果你希望创建一个 A 类支持 B 类的 API 单不继承自 B 类的实现，则 A 类应该实现(implement) B 接口：
+一个类相当于隐式定义了一个接口，这个接口包含该类所有的实例成员以及它实现的任何接口。如果你希望创建一个 A 类支持 B 类的 API 但不继承自 B 类的实现，则 A 类应该实现(implement) B 接口：
 
 ```dart
 class Point implements Comparable, Location {...}
